# regular

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: pre-commit.yaml  rust-clippy.yml  rust.yml
src/: expression.rs  lib.rs  macros.rs  main.rs  parse.rs  tokens.rs  tree.rs
src/tree/: brackets.rs  classify.rs  special.rs
