[package]
name = "regular"
description = "Regular Expression Manipulation and Analysis"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
license = "Apache-2.0"
homepage = "https://github.com/andrewaylett/regular"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"

anyhow = { version = "1.0.69", features=["backtrace"] }
thiserror = "1.0.38"

lazy_static = "1.4.0"
futures = "0.3.26"
itertools = "0.10.5"

clap = { version="4.1.6", features=["derive"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.16.0"
