[package]
name = "regular"
description = "Regular Expression Manipulation and Analysis"
version = "0.1.1"
edition = "2021"
rust-version = "1.64"

authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
license = "Apache-2.0"
homepage = "https://github.com/andrewaylett/regular"
readme = "README.md"
documentation = "https://docs.rs/regular"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.43"

lazy_static = "1.4.0"
itertools = "0.11.0"

clap = { version="4.3.12", features=["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.1"
